fdo#70232: sw: brown paper-bag fix for header sharing mangling footers

Stupid copy/paste error in SwDoc::CopyMasterFooter() checks
IsHeaderShared().

(regression from e1a9a348a519a69f898c9c1e6d87a5837b8267f9)

Change-Id: I0c0bc16a8c581cd05ed206a0de79c7983204165b
(cherry picked from commit 94c772adc2e8d8af468f3996527c84bf7704103f)